# openpi-ori

./: pyproject.toml  relabel_droid_actions.py  relabel_pi05_actions.py
src/openpi/policies/: policy.py  policy_config.py
src/openpi/shared/: normalize.py
