[project]
name = "openpi-relabel"
version = "0.1.0"
description = "Offline action relabeling for DROID RLDS datasets using pi0.5 policies"
requires-python = ">=3.11,<3.12"
dependencies = [
    "array-record>=0.5.1",
    "dlimp",
    "fsspec[gcs]>=2024.6.0",
    "numpy>=1.22.4,<2.0.0",
    "openpi",
    "openpi-client",
    "tensorflow-cpu==2.15.0",
    "tensorflow-datasets==4.9.9",
    "tqdm>=4.0.0",
    "tyro>=0.9.5",
]

[[tool.uv.index]]
name   = "libtpu"
url    = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
format = "flat"

[project.urls]
Repository = "https://github.com/lihzha/openpi-relabel"

[dependency-groups]
tpu = [
    "jax[tpu]==0.5.3 ; python_version < '3.13'",
]
cuda = [
    "jax[cuda12]==0.5.3 ; platform_machine != 'arm64'",
]

[tool.uv]
override-dependencies = ["ml-dtypes==0.4.1", "tensorstore==0.1.74"]

[tool.uv.sources]
openpi        = { path = "../language-action-pretraining/third_party/openpi/", editable = true }
openpi-client = { path = "../language-action-pretraining/third_party/openpi/packages/openpi-client/", editable = true }
dlimp         = { git = "https://github.com/kvablack/dlimp", rev = "ad72ce3a9b414db2185bc0b38461d4101a65477a" }
libtpu-nightly = { index = "libtpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
